[SOUP] Implement ResourceHandle::continueWillSendRequest() https://bugs.webkit.org/show_bug.cgi?id=126291

Reviewed by Martin Robinson.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::continueAfterWillSendRequest): Helper function that
continues with the load after willSendRequest has been called.
(WebCore::doRedirect): Call continueAfterWillSendRequest() when
client doesn't use async callbacks.
(WebCore::ResourceHandle::continueWillSendRequest): Call
continueAfterWillSendRequest().

Canonical link: https://commits.webkit.org/144258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161177 268f45cc-cd09-0410-ab3c-d52691b4dbfc